Integration/react forms (#391)
Use @Maif/react-form javascript library to build new backoffice API page.
Build new UI for this page and test usage of the lib with a big form.

update method of urlPathSegmentSanitized and checkNameUnique

FIX issue with swaggerEditor

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -363,6 +363,7 @@
   "deletion successful": "Supprimé avec succès",
   "No API": "Aucune API",
   "View this Api": "Voir cette api",
+  "Delete this Api": "Supprimer cette API",
   "New api": "Nouvelle api",
   "Informations": "Informations",
   "Otoroshi": {
@@ -380,7 +381,7 @@
   "Versions and tags": "Versions et tags",
   "Visibility and subscription": "Visibilité et souscription",
   "Authorizations": "Autorisations",
-  "api.already.exists": "Une api avec le nom \"%s\" existe déjà",
+  "api.already.exists": "Une api avec ce nom existe déjà",
   "Add header": "Titre",
   "Add bold text": "Gras",
   "Add italic text": "Italique",
@@ -437,7 +438,10 @@
   "The trial period": "La période d'essai",
   "Trial period unit": "Unité de période d'essai",
   "Currency": "Devise",
+  "Cost per hour": "Coût par heure",
+  "Cost per day": "Coût par jour",
   "Cost per month": "Coût par mois",
+  "Cost per year": "Coût par année",
   "Cost per add. req.": "Coût par req. add.",
   "Cost per additionnal request": "Coût par requête additionnelle",
   "Cost per req.": "Coût par req.",
@@ -797,8 +801,8 @@
   "team_api_post.title": "Titre de la publication",
   "team_api_post.content": "Contenu",
   "New Published Post": "Une nouvelle publication a été publiée",
-  "News": "Informations",
-  "deleted": "dupprimé",
+  "News": "Actualités",
+  "deleted": "supprimé",
   "Deleted API": "API supprimée",
   "Personal": "Personel",
   "team.invitation": "%s, administrateur de %s, vous a invité a rejoindre son équipe.",
@@ -977,6 +981,8 @@
   "constraints.matches.email": "Votre courriel doit être une addresse électronique valide",
   "constraint.matches.password": "Votre mots de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spéciale (#$^+=!*()@%&).",
   "constraint.oneof.confirm.password": "La confirmation du mots de passe doit être identique au mots de passe",
+  "constraints.reserved.char.version": "Certains caractères sont reservé pour la version (%s)",
+  "SEO": "SEO",
   "Robot.txt.label": "Contenu  du Robot.txt",
   "Robot.txt.content": "Le contenu du fichier Robot.txt file servi par Daikoku",
   "Mode": "Mode",
@@ -986,5 +992,27 @@
   "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
   "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée.",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
-  "incorrect password": "Mots de passe incorrect"
+  "incorrect password": "Mots de passe incorrect",
+  "Standard mode": "Mode standard",
+  "Expert mode": "Mode expert",
+  "Subscription.manual.help": "valeur obligatoire en raison de la configuration des métadonnées personnalisées",
+  "constraints.required.type": "Le type est requis",
+  "constraints.oneof.plan.type": "Merci de sélectionner un type de plan correct",
+  "constraints.positive": "La valeur doit être posittive",
+  "constraints.integer": "La valeur doit être un entier",
+  "constraints.required.billing.period": "La periode de facturation est requise",
+  "constraints.oneof.period": "Merci de sélectionner une unité de periode correct (Heures, Jours, Mois ou Années)",
+  "constraints.oneof.sub.process": "Merci de sélectionner une valeur correct pour le processus de souscription (Automatique or Manuel)",
+  "constraints.oneof.integration.process": "Merci de sélectionner une valeur correct pour le processus d'intégration (Automatique or Clef d'API)",
+  "constraints.required.period.unit": "L'unité de periode est requise",
+  "constraint.match.path": "La valeur doit être un chemin valide",
+  "Edit plan": "Modifier le plan",
+  "back.to.team": "Retour à %s",
+  "Otoroshi Settings": "Paramètres Otoroshi",
+  "Otoroshi Customization": "Personnalisation Otoroshi",
+  "Quotas & Billing": "Quotas & Facturation",
+  "Skip": "Passer",
+  "Otoroshi target": "Otoroshi cible",
+  "http.method": "Méthode HTTP",
+  "http.path": "Chemin"
 }
