--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -417,8 +417,6 @@
     "Apikey with clientId only": "API key with clientId only",
     "Read only apikey": "Read only API key",
     "Constrained services only": "Constrained services only",
-    "Dynamic prefix": "Dynamic prefix",
-    "dynamic.prefix.help": "the prefix used in tags and metadata used to target dynamic values that will be updated if the value change in the original plan",
     "Apikey metadata": "API key metadata",
     "Apikey tags": "API key tags",
     "Enable restrictions": "Enable restrictions",
@@ -588,10 +586,11 @@
     "rotation.error.message": "You can't toggle rotation because of plan rotation is forced to enabled",
     "notif.apikey.rotation.inprogress": "Your API key with clientId %s (%s/%s) begin his rotation. Its clientSecret had been updated.",
     "notif.apikey.rotation.ended": "Your API key with clientId %s (%s/%s) has ended his rotation.",
-    "Rotation period": "Rotation period",
-    "Grace Period": "Grace period",
+    "Rotation period": "Rotation period (hours)",
+    "Grace period": "Grace period (hours)",
     "help.apikey.rotation.period": "Period after which the client secret will be automatically changed",
     "help.apikey.grace.period": "Period during which the new client secret and the old are both active. The rotation period includes this period.",
+    "constraint.apikey.grace.period": "Grace period must be inferior to rotation period",
     "reset.secret.confirm": "Are you sure you want to reset this secret?",
     "View usage statistics": "View usage statistics",
     "Copy to clipboard": "Copy to clipboard",
@@ -923,9 +922,11 @@
     "aggregation api keys security": "Aggregation API keys security",
     "aggregation_apikeys.security.help": "Enable the possibility to use an API key on multiple APIs",
     "aggregation.api_key.security.notification": "You're enabled the aggregation of API keys. It's an advanced usage of the API keys. Keep in mind that the metadatas and the quotas will be shared between the parent API key and his aggregate API keys. Daikoku will not apply any control when conflict metadata.",
+    "disabled.due.to.aggregation.security": "disabled due to enabling of aggregation security",
     "I understood": "I understood",
     "team_apikey_for_api.make_unique": "Make unique",
     "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this API key unique and separate from his parent plan?",
+    "team_apikey_for_api.ask_for_make_unique.success_messsage": "The API key has been successfully separated from his parent",
     "team_api_info.isDefault": "Use as latest version",
     "request_api_access": "You need to be authorized to view this API.",
     "request_already_pending": "Your request is already pending",
