--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -410,8 +410,6 @@
   "Apikey with clientId only": "Clé d'API avec clientId uniquement",
   "Read only apikey": "Clé d'API en lecture seule",
   "Constrained services only": "Services limités uniquement",
-  "Dynamic prefix": "Préfixe dynamique",
-  "dynamic.prefix.help": "Le préfixe utilisé dans les balises et les métadonnées utilisées pour cibler les valeurs dynamiques qui seront mises à jour si la valeur change dans le plan d'origine",
   "Apikey metadata": "Clé d'API metadata",
   "Apikey tags": "Clé d'API tags",
   "Enable restrictions": "Activer les restrictions",
@@ -581,10 +579,11 @@
   "rotation.error.message": "Vous ne pouvez pas activer/désactiver la rotation automatique de la clé d'API car le plan force celle-ci.",
   "notif.apikey.rotation.inprogress": "Votre clé d'API avec le clientId %s a débuté sa rotation. Son clientSecret a été modifié.",
   "notif.apikey.rotation.ended": "Votre clé d'API avec le clientId %s a terminé sa rotation.",
-  "Rotation Period": "Période de rotation",
-  "Grace Period": "Période de tuilage",
+  "Rotation period": "Période de rotation",
+  "Grace period": "Période de tuilage",
   "help.apikey.rotation.period": "Période après laquelle le secret sera automatiquement modifié",
   "help.apikey.grace.period": "Période pendant laquelle le nouveau secret et l'ancien sont tous deux actifs (cette période est inclue dans la période de rotation).",
+  "constraint.apikey.grace.period": "La période de tuilage doit être inferieur à la période de rotation",
   "reset.secret.confirm": "Êtes-vous certain de vouloir réinitialiser le secret",
   "View usage statistics": "Voir les statistiques d'usage",
   "Copy to clipboard": "Copier dans le presse-papier",
@@ -916,9 +915,11 @@
   "aggregation api keys security": "Autoriser l'agrégation de clés d'APIs",
   "aggregation_apikeys.security.help": "Active la possibilité d'utiliser une même clé d'API sur plusieurs plans.",
   "aggregation.api_key.security.notification": "L'agrégation des clés API est une utilisation avancée. Gardez à l'esprit que les métadonnées et les quotas seront partagés entre chaque clé d'API parente et ses clés d'API agrégées. Daikoku n'appliquera aucun contrôle en cas de conflit de métadonnées.",
+  "disabled.due.to.aggregation.security": "désactivé en raison de l'activation de l'aggégation des clés",
   "I understood": "J'ai compris",
   "team_apikey_for_api.make_unique": "Rendre unique",
   "team_apikey_for_api.ask_for_make_unique": "Êtes-vous sûr de vouloir séparer cette clé d'API de la clé parente et d'en créer une nouvelle ?",
+  "team_apikey_for_api.ask_for_make_unique.success_messsage": "La clé d'API a correctement été séparée de la clé parent.",
   "team_api_info.isDefault": "Utiliser comme dernière version",
   "request_api_access": "Vous devez être autorisé pour visualiser cette API.",
   "request_already_pending": "Un requête d'autorisation est déjà en attente pour votre équipe.",
