New acces to tenant edit page
Allow admin  ot sesimpersonate

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -16,7 +16,7 @@
     "Organizations settings": "Organizations settings",
     "Daikoku settings": "Daikoku settings",
     "Search": "Search",
-    "Quit impersonation": "Quit impersonation, back to",
+    "Quit impersonation": "Quit impersonation",
     "Access to the notifications": "Access to the notifications",
     "Impersonated by": "impersonated by",
     "Logged in as": "Logged in as",
