--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -16,7 +16,7 @@
   "Organizations settings": "Paramètres de l'organisation",
   "Daikoku settings": "Paramètre Daikoku",
   "Search": "Rechercher",
-  "Quit impersonation": "Quitter l'impersonation, retour à",
+  "Quit impersonation": "Quitter l'impersonation",
   "Access to the notifications": "Accès aux notifications",
   "Impersonated by": "personnifié par",
   "Logged in as": "Connecté en tant que",
