Add soem translation and fix some stuffs

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -553,6 +553,8 @@
     "login.to.tenant": "Login to %s",
     "api.creation.title.modal": "Select the team for which to create new API",
     "api.creation.description.modal": "You are going to create an API. For which team do you want to create it?",
+    "apigroup.creation.title.modal": "Select the team for which to create new APIs group",
+    "apigroup.creation.description.modal": "You are going to create an APIs group. For which team do you want to create it?",
     "Set font family from asset": "Set font family from asset",
     "Public": "Public",
     "Private": "Private",
@@ -651,7 +653,7 @@
     "api.unique.name.error": "API name must be unique",
     "Jump to specific service": "Jump to specific API",
     "init.services.title": "API (%s/%s)",
-    "API group": "API group",
+    "API group": "APIs group",
     "Service": "API",
     "Api name": "API name",
     "Api team": "API team",
@@ -1125,5 +1127,18 @@
     "transfer.api.ownership.description": "Transfer the API to another team",
     "Transfer": "Transfer",
     "delete.api.title": "Delete API",
-    "delete.api.description": "Once you delete an API, there is no going back. Please be certain."
+    "delete.api.description": "Once you delete an API, there is no going back. Please be certain.",
+    "Edit APIs group": "Edit APIs group",
+    "contact.team": "Contact %s",
+    "Issues": "Issues",
+    "View this APIs Group": "Vois ce group d'APIs",
+    "Basic.informations": "Basic informations",
+    "Tags and categories": "Tags and categories",
+    "Consumptions": "Consumptions",
+    "team.transfer.notified": "Team has been notified. please wait until acceptation",
+    "new.owner": "New owner team",
+    "type.api.name.confirmation": "Please type %s to confirm",
+    "constraints.required.team": "Team is required",
+    "constraints.type.api.name": "Please type %s to valid the transfer",
+    "Set image from asset": "Set image from asset"
 }
