--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -546,6 +546,8 @@
   "login.to.tenant": "Se connecter à %s",
   "api.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer une nouvelle API",
   "api.creation.description.modal": "Vous allez créer une nouvelle API. Pour quelle équipe voulez-vous la créer ?",
+  "apigroup.creation.title.modal": "Sélectionnez l'équipe pour laquelle créer un nouveau groupe d'APIs",
+  "apigroup.creation.description.modal": "Vous allez créer un nouveau groupe d'API. Pour quelle équipe voulez-vous le créer ?",
   "Set font family from asset": "Définir la police de style depuis un asset",
   "Public": "Publique",
   "Private": "Privée",
@@ -644,7 +646,7 @@
   "api.unique.name.error": "Le nom de l'API doit être unique",
   "Jump to specific service": "Aller à un service spécifique",
   "init.services.title": "API (%s/%s)",
-  "API group": "Groupe de l'API",
+  "API group": "Groupe d'APIs",
   "Service": "API",
   "Api name": "Nom de l'API",
   "Api team": "Équipe",
@@ -1127,5 +1129,18 @@
   "transfer.api.ownership.description": "Transférer l'API à une autre équipe",
   "Transfer": "Transférer",
   "delete.api.title": "Supprimer l'API",
-  "delete.api.description": "Une fois l'API supprimée, il n'y a pas de retour en arrière. Soyez sûr de vous."
+  "delete.api.description": "Une fois l'API supprimée, il n'y a pas de retour en arrière. Soyez sûr de vous.",
+  "Edit APIs group": "Modifier le groupe d'APIs",
+  "contact.team": "Contacter %s",
+  "Issues": "Questions",
+  "View this APIs Group": "Voir ce group d'APIs",
+  "Basic.informations": "Informations de base",
+  "Tags and categories": "Tags et catégories",
+  "Consumptions": "Consommations",
+  "team.transfer.notified": "L'équipe a été notifiée. merci d'attendre l'acceptation",
+  "new.owner": "Nouvelle équipe",
+  "type.api.name.confirmation": "Veuillez saisir %s pour confirmer",
+  "constraints.required.team": "L'équipe est requise",
+  "constraints.type.api.name": "Veuillez saisir %s pour valider le transfert",
+  "Set image from asset": "Définir l'image depuis un asset"
 }
