--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1131,7 +1131,7 @@
     "Edit APIs group": "Edit APIs group",
     "contact.team": "Contact %s",
     "Issues": "Issues",
-    "View this APIs Group": "Vois ce group d'APIs",
+    "View this APIs Group": "View this APIs Group",
     "Basic.informations": "Basic informations",
     "Tags and categories": "Tags and categories",
     "Consumptions": "Consumptions",
