--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1133,7 +1133,7 @@
   "Edit APIs group": "Modifier le groupe d'APIs",
   "contact.team": "Contacter %s",
   "Issues": "Questions",
-  "View this APIs Group": "Voir ce group d'APIs",
+  "View this APIs Group": "Voir ce groupe d'APIs",
   "Basic.informations": "Informations de base",
   "Tags and categories": "Tags et catégories",
   "Consumptions": "Consommations",
