Add react-form to api posts edition page

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -802,6 +802,7 @@
     "team_api_post.saved": "News saved",
     "team_api_post.failed": "Something went wrong",
     "team_api_post.new": "Create news",
+    "team_api_post.update": "Update news",
     "team_api_post.empty_posts_list": "No news",
     "team_api_post.load_old_posts": "Load old news",
     "team_api_post.publish": "Publish news",
@@ -988,6 +989,7 @@
     "constraints.required.confirmPassword": "Confirm password is required",
     "constraints.required.title": "Title is required",
     "constraints.required.version": "Version is required",
+    "constraints.required.content": "Content is required",
     "constraints.format.url": "%s must be a valid URL",
     "constraints.matches.email": "Your mail must be a valid email address",
     "constraint.matches.password": "Your password must have 8 letters min with capital, number and special character (#$^+=!*()@%&)",
