--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -795,6 +795,7 @@
   "team_api_post.saved": "Publication enregistrée",
   "team_api_post.failed": "Une erreur est survenue",
   "team_api_post.new": "Nouvelle publication",
+  "team_api_post.update": "Metter à jour une publication",
   "team_api_post.empty_posts_list": "Aucune publication",
   "team_api_post.load_old_posts": "Charger plus de publications",
   "team_api_post.publish": "Publier la publication",
@@ -991,6 +992,7 @@
   "constraints.required.confirmPassword": "Le mot de passe de confirmation est requis",
   "constraints.required.title": "Le titre est requis",
   "constraints.required.version": "La version est requise",
+  "constraints.required.content": "Le contenu est requis",
   "constraints.format.url": "%s doit être une URL valide",
   "constraints.matches.email": "Votre courriel doit être une addresse électronique valide",
   "constraint.matches.password": "Votre mot de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spécial (#$^+=!*()@%&).",
