Add react-form to testing  apikey modal

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -991,6 +991,8 @@
     "constraints.required.version": "Version is required",
     "constraints.required.content": "Content is required",
     "constraints.required.file": "File is required",
+    "constraints.required.otoroshi.settings": "Otoroshi settings are required",
+    "constraints.required.authorizedEntities": "Authorized entities are required",
     "constraints.format.url": "%s must be a valid URL",
     "constraints.matches.email": "Your mail must be a valid email address",
     "constraint.matches.password": "Your password must have 8 letters min with capital, number and special character (#$^+=!*()@%&)",
@@ -999,6 +1001,7 @@
     "constraints.reserved.char.version": "Some characters are reserved for version (%s)",
     "constraints.file.type.forbidden": "File type is forbidden",
     "constraints.file.type.required": "File content-type is required",
+    "constraint.min.authorizedEntities": "Authorized entities must contains one service or one group min.",
     "SEO": "SEO",
     "Robot.txt.label": "Robots.txt content",
     "Robot.txt.content": "the content of the robots.txt file serve by Daikoku",
