--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -907,7 +907,7 @@
   "send_grid.api_key": "API Key",
   "send_grid.from_email": "Email de l'expéditeur",
   "audittrail.export.label": "Exporter la piste d'audit",
-  "Authorized entities": "Authorized entities",
+  "Authorized entities": "Entités otoroshi autorisées",
   "Authorized.entities.placeholder": "Sélectionnez les groupes de services et/ou les services Otoroshi",
   "teamapi.new_version": "Nouvelle version",
   "authorized.entities.help": "Sélectionnez les groupes de services et/ou les services Otoroshi pour lesquels la clé d'API sera autorisée à accéder",
@@ -994,6 +994,8 @@
   "constraints.required.version": "La version est requise",
   "constraints.required.content": "Le contenu est requis",
   "constraints.required.file": "Le fichier est requis",
+  "constraints.required.otoroshi.settings": "les paramètre Otoroshi sont requis",
+  "constraints.required.authorizedEntities": "les entitées autorisées sont requise",
   "constraints.format.url": "%s doit être une URL valide",
   "constraints.matches.email": "Votre courriel doit être une addresse électronique valide",
   "constraint.matches.password": "Votre mot de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spécial (#$^+=!*()@%&).",
@@ -1001,6 +1003,7 @@
   "constraints.reserved.char.version": "Certains caractères sont reservés pour la version (%s)",
   "constraints.file.type.forbidden": "Le type du fichier est interdit",
   "constraints.file.type.required": "Le content-type du fichier est requis",
+  "constraint.min.authorizedEntities": "Les entitées autorisées doivent contenire au minimum une service ou un groupe",
   "SEO": "SEO",
   "Robot.txt.label": "Contenu du fichier robots.txt",
   "Robot.txt.content": "Le contenu du fichier robots.txt servi par Daikoku",
